Add May 15th details

--- a/index.html
+++ b/index.html
@@ -1,1 +1,17 @@
-Hello World!
+<html>
+  <h1>Common Floor Contra Dance</h1>
+  May 15, 2022
+  Topsham Grange Hall (<a href="https://goo.gl/maps/BWjQiKwE2KEPh49q7">47 Pleasant St, Topsham, Maine</a>)
+  
+  Calling by:
+  Hannah Chamberlain and Ellen Hodgkin
+  Music by:
+  John Pranio (fiddle)
+  Bethany Waickman (guitar)
+  Glen Loper (Mandolin)
+  
+  Beginner lesson at 7
+  Dance from 7:30 to 10
+  
+  Masks, vax and boosted (checked at the door)
+</html>
