--- a/index.html
+++ b/index.html
@@ -1,17 +1,25 @@
 <html>
   <h1>Common Floor Contra Dance</h1>
   May 15, 2022
+  <p>
   Topsham Grange Hall (<a href="https://goo.gl/maps/BWjQiKwE2KEPh49q7">47 Pleasant St, Topsham, Maine</a>)
-  
+  <p>
   Calling by:
-  Hannah Chamberlain and Ellen Hodgkin
+  <ul>
+    <li>Hannah Chamberlain</li>
+    <li>Ellen Hodgkin</li>
+  </ul>
   Music by:
-  John Pranio (fiddle)
-  Bethany Waickman (guitar)
-  Glen Loper (Mandolin)
-  
+  <ul>
+    <li>John Pranio (fiddle)</li>
+    <li>Bethany Waickman (guitar)</li>
+    <li>Glen Loper (Mandolin)</li>
+  </ul>
   Beginner lesson at 7
+  <p>
   Dance from 7:30 to 10
-  
+  <p>
+  $10 (cash or venmo)
+  <p>
   Masks, vax and boosted (checked at the door)
 </html>
