--- a/index.html
+++ b/index.html
@@ -1,25 +1,31 @@
 <html>
-  <h1>Common Floor Contra Dance</h1>
-  May 15, 2022
-  <p>
-  Topsham Grange Hall (<a href="https://goo.gl/maps/BWjQiKwE2KEPh49q7">47 Pleasant St, Topsham, Maine</a>)
-  <p>
-  Calling by:
-  <ul>
-    <li>Hannah Chamberlain</li>
-    <li>Ellen Hodgkin</li>
-  </ul>
-  Music by:
-  <ul>
-    <li>John Pranio (fiddle)</li>
-    <li>Bethany Waickman (guitar)</li>
-    <li>Glen Loper (Mandolin)</li>
-  </ul>
-  Beginner lesson at 7
-  <p>
-  Dance from 7:30 to 10
-  <p>
-  $10 (cash or venmo)
-  <p>
-  Masks, vax and boosted (checked at the door)
+	<head>
+	</head>
+	<body style="color:black; background:SeaShell;">
+		<h1>Common Floor Contra Dance</h1>
+		<h2>May 15, 2022</h2>
+		<p>
+		Topsham Grange Hall (<a href="https://goo.gl/maps/BWjQiKwE2KEPh49q7">47 Pleasant St, Topsham, Maine</a>)
+		<p>
+		Calling by:
+		<ul>
+		  <li>Hannah Chamberlain</li>
+		  <li>Ellen Hodgkin</li>
+		</ul>
+		Music by:
+		<ul>
+		  <li>John Pranio (fiddle)</li>
+		  <li>Bethany Waickman (guitar)</li>
+		  <li>Glen Loper (Mandolin)</li>
+		</ul>
+		Beginner lesson at 7pm
+		<p>
+		Dance from 7:30 to 10pm
+		<p>
+		$10 (cash or venmo)
+		<p>
+		Masks, vax and boosted (checked at the door)
+		<p>
+		For more info or to sign up for dances reminders, email <a href="mailto:CommonFloorContraDance@gmail.com">CommonFloorContraDance@gmail.com<a/>
+	</body>
 </html>
