--- a/index.html
+++ b/index.html
@@ -27,5 +27,9 @@
 		Masks, vax and boosted (checked at the door)
 		<p>
 		For more info or to sign up for dances reminders, email <a href="mailto:CommonFloorContraDance@gmail.com">CommonFloorContraDance@gmail.com<a/>
+		<p>
+		Help spread the word by printing and posting the flyer:
+		<p>
+		<embed src="May%2015%20Flyer.pdf#zoom=50" width="50%" height="100%" type="application/pdf">
 	</body>
 </html>
