--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <html>
 	<head>
+		<title>Common Floor Contra Dance</title>
+		<link rel="icon" type="image/x-icon" href="/logo.png">
 	</head>
 	<body style="color:black; background:SeaShell;">
 		<h1>Common Floor Contra Dance</h1>
