link to FB event

--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
 		Masks, vax and boosted (checked at the door)
 		<p>
 		For more info or to sign up for dances reminders, email <a href="mailto:CommonFloorContraDance@gmail.com">CommonFloorContraDance@gmail.com<a/>
-		<p>
-		Help spread the word by printing and posting the flyer:
+		<p>	
+		Spread the word by inviting people to our <a href="https://www.facebook.com/events/533402378164876">facebook event</a>, or by printing/sharing this beautiful flyer:
 		<p>
 		<embed src="May%2015%20Flyer.pdf#zoom=50" width="50%" height="100%" type="application/pdf">
 	</body>
