--- a/index.html
+++ b/index.html
@@ -30,8 +30,10 @@
 		<p>
 		For more info or to sign up for dances reminders, email <a href="mailto:CommonFloorContraDance@gmail.com">CommonFloorContraDance@gmail.com<a/>
 		<p>	
-		Spread the word by inviting people to our <a href="https://www.facebook.com/events/533402378164876">facebook event</a>, or by printing/sharing this beautiful flyer:
+		Spread the word by inviting people to our <a href="https://www.facebook.com/events/533402378164876">facebook event</a>, or by printing/sharing this beautiful flyer that Ellen Hodgkin made for us:
 		<p>
 		<embed src="May%2015%20Flyer.pdf#zoom=50" width="50%" height="100%" type="application/pdf">
+		<p>
+		This site is by Alex
 	</body>
 </html>
