Explain vax card will be checked

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 		<p>
 		$10 (cash or venmo)
 		<p>
-		Masks, vax and boosted (checked at the door)
+		Masks, vax and boosted (vaccination card will be checked at the door, have it handy)
 		<p>
 		For more info or to sign up for dances reminders, email <a href="mailto:CommonFloorContraDance@gmail.com">CommonFloorContraDance@gmail.com<a/>
 		<p>	
