Add donation and volunteeer suggestions

--- a/index.html
+++ b/index.html
@@ -28,12 +28,18 @@
 		<p>
 		Masks, vax and boosted (vaccination card will be checked at the door, have it handy)
 		<p>
-		For more info or to sign up for dances reminders, email <a href="mailto:CommonFloorContraDance@gmail.com">CommonFloorContraDance@gmail.com<a/>
-		<p>	
-		Spread the word by inviting people to our <a href="https://www.facebook.com/events/533402378164876">facebook event</a>, or by printing/sharing this beautiful flyer that Ellen Hodgkin made for us:
+		You can help!
+		<ul>
+			<li>To volunteer, email <a href="mailto:CommonFloorContraDance@gmail.com">CommonFloorContraDance@gmail.com<a/></li>
+			<li>Inviting people to our <a href="https://www.facebook.com/events/533402378164876">facebook event</a></li>
+			<li>Print/sharing this beautiful flyer (below) that Ellen Hodgkin made</li>
+			<li>Support the event by donating to <a href="">https://account.venmo.com/pay?recipients=Samson-Fowler-93&note=CFCD%20Donation</a></li>
+		</ul>
+		<p>
+		For questions or to sign up for dances reminders, email <a href="mailto:CommonFloorContraDance@gmail.com">CommonFloorContraDance@gmail.com<a/>
 		<p>
 		<embed src="May%2015%20Flyer.pdf#zoom=50" width="50%" height="100%" type="application/pdf">
 		<p>
-		This site is by Alex
+		Site by Alex
 	</body>
 </html>
