--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 			<li>To volunteer, email <a href="mailto:CommonFloorContraDance@gmail.com">CommonFloorContraDance@gmail.com<a/></li>
 			<li>Inviting people to our <a href="https://www.facebook.com/events/533402378164876">facebook event</a></li>
 			<li>Print/sharing this beautiful flyer (below) that Ellen Hodgkin made</li>
-			<li>Support the event by donating to <a href="">https://account.venmo.com/pay?recipients=Samson-Fowler-93&note=CFCD%20Donation</a></li>
+			<li>Support the event by <a href="https://account.venmo.com/pay?recipients=Samson-Fowler-93&note=CFCD%20Donation">donating</a></li>
 		</ul>
 		<p>
 		For questions or to sign up for dances reminders, email <a href="mailto:CommonFloorContraDance@gmail.com">CommonFloorContraDance@gmail.com<a/>
