--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
 		<ul>
 			<li>To volunteer, email <a href="mailto:CommonFloorContraDance@gmail.com">CommonFloorContraDance@gmail.com<a/></li>
 			<li>Inviting people to our <a href="https://www.facebook.com/events/533402378164876">facebook event</a></li>
-			<li>Print/sharing this beautiful flyer (below) that Ellen Hodgkin made</li>
+			<li>Print/share this beautiful flyer (below) that Ellen Hodgkin made</li>
 			<li>Support the event by <a href="https://account.venmo.com/pay?recipients=Samson-Fowler-93&note=CFCD%20Donation">donating</a></li>
 		</ul>
 		<p>
-		For questions or to sign up for dances reminders, email <a href="mailto:CommonFloorContraDance@gmail.com">CommonFloorContraDance@gmail.com<a/>
+		For questions or to sign up for future dance reminders, email <a href="mailto:CommonFloorContraDance@gmail.com">CommonFloorContraDance@gmail.com<a/>
 		<p>
 		<embed src="May%2015%20Flyer.pdf#zoom=50" width="50%" height="100%" type="application/pdf">
 		<p>
