Add note on masks and CoC

--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
 		<p>
 		$10 (cash or venmo)
 		<p>
-		Masks, vax and boosted (vaccination card will be checked at the door, have it handy)
+		Masks, vax and boosted (vaccination card will be checked at the door, have it handy).
+		<p>
+		Coming soon: A code of conduct and specific mask guidlines (we're still discussing these).
 		<p>
 		You can help!
 		<ul>
