--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
 		<p>
 		$10 (cash or venmo)
 		<p>
-		Masks, vax and boosted (vaccination card will be checked at the door, have it handy).
+		Masks (N95 recommended), vax and boosted (vaccination card will be checked at the door, have it handy).
 		<p>
-		Coming soon: A code of conduct and specific mask guidlines (we're still discussing these).
+		Coming soon: We will have a code of conduct supporting a consent-focused community space (we're still drafting this).
 		<p>
 		You can help!
 		<ul>
