Add link to facebook group

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
 		<ul>
 			<li>To volunteer, email <a href="mailto:CommonFloorContraDance@gmail.com">CommonFloorContraDance@gmail.com<a/></li>
 			<li>Inviting people to our <a href="https://www.facebook.com/events/533402378164876">facebook event</a></li>
+			<li>Join our <a href="https://www.facebook.com/groups/1041892349764445">facebook group</a></li>
 			<li>Print/share this beautiful flyer (below) that Ellen Hodgkin made</li>
 			<li>Support the event by <a href="https://account.venmo.com/pay?recipients=Samson-Fowler-93&note=CFCD%20Donation">donating</a></li>
 		</ul>
@@ -42,6 +43,6 @@
 		<p>
 		<embed src="May%2015%20Flyer.pdf#zoom=50" width="50%" height="100%" type="application/pdf">
 		<p>
-		Site by Alex
+		Site by Alex, all typos are his.
 	</body>
 </html>
