--- a/index.html
+++ b/index.html
@@ -1,7 +1,12 @@
 <html>
 	<head>
 		<title>Common Floor Contra Dance</title>
+		<meta content="utf-8" http-equiv="encoding">
+		<meta content="text/html;charset=utf-8" http-equiv="Content-Type">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<meta name="keywords" content="Contra Dance Topsham Maine">
 		<link rel="icon" type="image/x-icon" href="/logo.png">
+		<link rel="stylesheet" type="text/css" href="style.css" media="screen"/>
 	</head>
 	<body style="color:black; background:SeaShell;">
 		<h1>Common Floor Contra Dance</h1>
