--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta content="utf-8" http-equiv="encoding">
 		<meta content="text/html;charset=utf-8" http-equiv="Content-Type">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<meta name="keywords" content="Contra Dance Topsham Maine">
+		<meta name="keywords" content="contra dance Topsham Maine">
 		<link rel="icon" type="image/x-icon" href="/logo.png">
 		<link rel="stylesheet" type="text/css" href="style.css" media="screen"/>
 	</head>
@@ -33,7 +33,7 @@
 		<p>
 		Masks (N95 recommended), vax and boosted (vaccination card will be checked at the door, have it handy).
 		<p>
-		Coming soon: We will have a code of conduct supporting a consent-focused community space (we're still drafting this).
+		Coming soon: We will have a code of conduct supporting a kind, courteous and safe dance community (we're still drafting this).
 		<p>
 		You can help!
 		<ul>
