--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 		<ul>
 		  <li>John Pranio (fiddle)</li>
 		  <li>Bethany Waickman (guitar)</li>
-		  <li>Glen Loper (Mandolin)</li>
+		  <li>Glen Loper (mandolin)</li>
 		</ul>
 		Beginner lesson at 7pm
 		<p>
@@ -31,14 +31,13 @@
 		<p>
 		$10 (cash or venmo)
 		<p>
-		Masks (N95 recommended), vax and boosted (vaccination card will be checked at the door, have it handy).
+		Masks (N95 recommended), vax and boosted (vaccination card will be checked at the door, have it handy)
 		<p>
-		Coming soon: We will have a code of conduct supporting a kind, courteous and safe dance community (we're still drafting this).
-		<p>
-		You can help!
+		Coming soon: We will have a code of conduct supporting a kind, courteous and safe dance community (we're still drafting this)
+		<h2>You can help!</h2>
 		<ul>
 			<li>To volunteer, email <a href="mailto:CommonFloorContraDance@gmail.com">CommonFloorContraDance@gmail.com<a/></li>
-			<li>Inviting people to our <a href="https://www.facebook.com/events/533402378164876">facebook event</a></li>
+			<li>Invite people to our <a href="https://www.facebook.com/events/533402378164876">facebook event</a></li>
 			<li>Join our <a href="https://www.facebook.com/groups/1041892349764445">facebook group</a></li>
 			<li>Print/share this beautiful flyer (below) that Ellen Hodgkin made</li>
 			<li>Support the event by <a href="https://account.venmo.com/pay?recipients=Samson-Fowler-93&note=CFCD%20Donation">donating</a></li>
@@ -48,6 +47,6 @@
 		<p>
 		<embed src="May%2015%20Flyer.pdf#zoom=50" width="50%" height="100%" type="application/pdf">
 		<p>
-		Site by Alex, all typos are his.
+		Site by Alex, all typos are his
 	</body>
 </html>
