--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 		Coming soon: We will have a code of conduct supporting a kind, courteous and safe dance community (we're still drafting this)
 		<h2>You can help!</h2>
 		<ul>
-			<li>To volunteer, email <a href="mailto:CommonFloorContraDance@gmail.com">CommonFloorContraDance@gmail.com<a/></li>
+			<li>To volunteer, email <a href="mailto:CommonFloorContraDance@gmail.com">CommonFloorContraDance@gmail.com</a></li>
 			<li>Invite people to our <a href="https://www.facebook.com/events/533402378164876">facebook event</a></li>
 			<li>Join our <a href="https://www.facebook.com/groups/1041892349764445">facebook group</a></li>
 			<li>Print/share this beautiful flyer (below) that Ellen Hodgkin made</li>
