--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 			<li>Support the event by <a href="https://account.venmo.com/pay?recipients=Samson-Fowler-93&note=CFCD%20Donation">donating</a></li>
 		</ul>
 		<p>
-		For questions or to sign up for future dance reminders, email <a href="mailto:CommonFloorContraDance@gmail.com">CommonFloorContraDance@gmail.com<a/>
+		For questions or to sign up for future dance reminders, email <a href="mailto:CommonFloorContraDance@gmail.com">CommonFloorContraDance@gmail.com</a>
 		<p>
 		<embed src="May%2015%20Flyer.pdf#zoom=50" width="50%" height="100%" type="application/pdf">
 		<p>
