fix flyer hight

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 		<p>
 		For questions or to sign up for future dance reminders, email <a href="mailto:CommonFloorContraDance@gmail.com">CommonFloorContraDance@gmail.com</a>
 		<p>
-		<embed src="May%2015%20Flyer.pdf#zoom=50" width="50%" height="100%" type="application/pdf">
+		<embed src="May%2015%20Flyer.pdf#zoom=50" width="50%" height="610vh" type="application/pdf">
 		<p>
 		Site by Alex, all typos are his
 	</body>
