--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<link rel="icon" type="image/x-icon" href="/logo.png">
 		<link rel="stylesheet" type="text/css" href="style.css" media="screen"/>
 	</head>
-	<body>
+	<body style="overflow-x:hidden">
 		<h1>Common Floor Contra Dance</h1>
 		<h2>May 15, 2022</h2>
 		<p>
