--- a/index.html
+++ b/index.html
@@ -46,20 +46,8 @@
 		<p>
 		For questions or to sign up for future dance reminders, email <a href="mailto:CommonFloorContraDance@gmail.com">CommonFloorContraDance@gmail.com</a>
 		<p>
-		<div id="flyerLoader"></div>
+		<embed src="May%2015%20Flyer.pdf#zoom=50" type="application/pdf" width="50%" height="610vh">
 		<p>
 		Site by Alex, all typos are his
-
-		<script>
-			if (!('connection' in navigator) || navigator.connection.saveData !== true) {
-				var flyerLoader = document.getElementById("flyerLoader");
-				var flyer = document.createElement('embed');
-				flyer.setAttribute('src', 'May%2015%20Flyer.pdf#zoom=50');
-				flyer.setAttribute('width', '50%');
-				flyer.setAttribute('height', '610vh');
-				flyer.setAttribute('type', 'application/pdf');
-				flyerLoader.appendChild(flyer);
-			}
-		</script>
 	</body>
 </html>
