Add last modified date

--- a/CodeOfConduct.html
+++ b/CodeOfConduct.html
@@ -30,5 +30,6 @@
 			<li>Systematic or continued unwanted and annoying actions, including threats and demands, will not be tolerated. This can be verbal, physical, or sexual, and none of it is ok.</li>
 		<ul/>
 		This CoC is a living, breathing document and will change over time. We invite community input and any changes will be announced on social media, email and this website.
+		Last modified on 5/7/2022
 	</body>
 </html>
