--- a/CodeOfConduct.html
+++ b/CodeOfConduct.html
@@ -11,8 +11,8 @@
 	</head>
 	<body>
 		<a href="/">🡠 Home</a>
-		<h1>Introduction & Mission</h1> 
-			At the CFC we want to create an environment of connection, community, and joy for all levels of dancers from all backgrounds. We cultivate this culture with a foundation of consent, both spoken and practiced. We strive to have a dance that is all-gender and consent-based, and we call Larks/Ravens. Each time you dance at CFC we want to make sure you feel happy, safe, comfortable and empowered to communicate. CFC helps uphold a comfortable and safe environment by teaching consent at all our dances and by having a designated safety team.
+		<h1>Introduction & Mission</h1>
+		At the CFC we want to create an environment of connection, community, and joy for all levels of dancers from all backgrounds. We cultivate this culture with a foundation of consent, both spoken and practiced. We strive to have a dance that is all-gender and consent-based, and we call Larks/Ravens. Each time you dance at CFC we want to make sure you feel happy, safe, comfortable and empowered to communicate. CFC helps uphold a comfortable and safe environment by teaching consent at all our dances and by having a designated safety team.
 		<p>
 		The safety and success of our dance is a team effort and that includes you! If you choose to dance with us we ask that you commit to following our code of conduct. 
 		<h1>Code of Conduct</h1>
@@ -25,13 +25,15 @@
 			<li>If you see a dancer in your set make a mistake, do your best to take a moment to verbally show that dancer where they have to be next. Do not shove or grab other dancers. It is more important to have fun, than to get everything right.</li> 
 			<li>Dance with safety in mind. On the crowded dance floor, be aware of nearby dancers when twirling, avoid squeezing hands and forceful leading or self-flourishing. Keep in mind that many dancers have injuries that may not be visible.</li>
 			<li>Be there for each other. If you see something problematic, or someone struggling, either let the dance organizers know or approach that person and check in with them.</li>
-			<li>Give and take feedback gracefully. ("Would you like (May I offer) a dancing tip?")</li>
+			<li>Give and take feedback gracefully. For example: "Would you like (or May I offer) a dancing tip?"</li>
 			<li>We do not tolerate hate language of any kind, at any time, at our dances.  If you bring it to our dance, you will be escorted out immediately.</li>
 			<li>Systematic or continued unwanted and annoying actions, including threats and demands, will not be tolerated. This can be verbal, physical, or sexual, and none of it is ok.</li>
-		<ul/>
+		</ul>
 		<p>
 		This CoC is a living, breathing document and will change over time. We invite community input and any changes will be announced on social media, email and this website.
 		<p>
-		Last modified on 5/7/2022
+		<script>
+			document.write("Last modified on " + document.lastModified);
+		</script>
 	</body>
 </html>
