add last modified

--- a/index.html
+++ b/index.html
@@ -48,6 +48,9 @@
 		<p>
 		<embed src="May%2015%20Flyer.pdf#zoom=50" type="application/pdf" width="50%" height="610vh">
 		<p>
-		Site by Alex, all typos are his
+		Site by Alex, all typos are his.
+		<script>
+			document.write("Last modified on " + document.lastModified);
+		</script>
 	</body>
 </html>
