--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 		<p>
 		Masks (N95 recommended), vax and boosted (vaccination card will be checked at the door, have it handy)
 		<p>
-		Coming soon: We will have a code of conduct supporting a kind, courteous and safe dance community (we're still drafting this)
+		Please review our <a href="/CodeOfConduct">Code of Conduct</a> with which we hope to support a kind, courteous and safe dance community
 		<h2>You can help!</h2>
 		<ul>
 			<li>To volunteer, email <a href="mailto:CommonFloorContraDance@gmail.com">CommonFloorContraDance@gmail.com</a></li>
