switch to better supported arrow char

--- a/CodeOfConduct.html
+++ b/CodeOfConduct.html
@@ -10,7 +10,7 @@
 		<link rel="stylesheet" type="text/css" href="style.css" media="screen"/>
 	</head>
 	<body>
-		<a href="/">🡠 Home</a>
+		<a href="/">❰ Home</a>
 		<h1>Introduction & Mission</h1>
 		At the CFC we want to create an environment of connection, community, and joy for all levels of dancers from all backgrounds. We cultivate this culture with a foundation of consent, both spoken and practiced. We strive to have a dance that is all-gender and consent-based, and we call Larks/Ravens. Each time you dance at CFC we want to make sure you feel happy, safe, comfortable and empowered to communicate. CFC helps uphold a comfortable and safe environment by teaching consent at all our dances and by having a designated safety team.
 		<p>
