--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 		<meta name="keywords" content="common floor contra dance Topsham Maine">
 		<link rel="icon" type="image/x-icon" href="logo.png">
 		<link rel="stylesheet" type="text/css" href="style.css" media="screen"/>
+		<link rel="canonical" href="http://www.commonfloorcontra.dance" media="screen"/>
 	</head>
 	<body>
 		<h1>Common Floor Contra Dance</h1>
