--- a/CodeOfConduct.html
+++ b/CodeOfConduct.html
@@ -8,6 +8,7 @@
 		<meta name="keywords" content="common floor contra dance code conduct">
 		<link rel="icon" type="image/x-icon" href="logo.png">
 		<link rel="stylesheet" type="text/css" href="style.css" media="screen"/>
+		<link rel="canonical" href="http://www.commonfloorcontra.dance/CodeOfConduct" media="screen"/>
 	</head>
 	<body>
 		<a href="/">❰ Home</a>
