--- a/CovidPolicy.html
+++ b/CovidPolicy.html
@@ -17,8 +17,9 @@
 		<ul>
 			<li>Dancers <b>must wear a well-fitted N95</b> (or similar) mask while inside the building at all times (aside from drinking). We may have some available, but please don't rely on it.</li>
 			<li>Dancers <b>must provide proof of up-to-date vaccination</b> (primary series plus 1 booster, if eligible).</li>
+			<li>Dancers <b>must provide a way to contact them</b> so they can be notified of COVID-19 cases after the dance.</li>
 			<li>Dancers <b>acknowledge and assume risk</b> of contracting or being exposed to COVID-19 at this event. They absolve the dance’s organizers, performers, volunteers, and venue of any liability for contracting or being exposed to COVID-19 at this event.</li>
-			<li>Dancers <b>must not attend if they feel ill *in any way*</b>, including experiencing any COVID-19 symptoms such as: cough, congestion or runny nose, headache, fatigue, muscle or body aches, fever or chills, loss of smell or taste, diarrhea, nausea or vomiting, and/or shortness of breath or difficulty breathing.</li>
+			<li>Dancers <b>must not attend if they feel ill in any way</b>, including experiencing any COVID-19 symptoms such as: cough, congestion or runny nose, headache, fatigue, muscle or body aches, fever or chills, loss of smell or taste, diarrhea, nausea or vomiting, and/or shortness of breath or difficulty breathing.</li>
 			<li>Dancers <b>must receive a negative test result before attending if they had COVID-19</b> in the 14 days (after my 5-day minimum isolation period has ended and all symptoms are gone).</li>
 			<li>Dancers <b>must receive a negative test result before attending if they had close contact with someone with COVID-19</b> in the 14 days before the dance.</li>
 			<li>Dancers <b>must notify CommonFloorContraDance@gmail.com if you test positive for COVID-19 in the 10 days following</b> a dance, so they can provide exposure notifications to all attendees.</li>
