add viewport minheight

--- a/CovidPolicy.html
+++ b/CovidPolicy.html
@@ -4,7 +4,7 @@
 		<title>Covid Policy | Common Floor Contra Dance</title>
 		<meta content="utf-8" http-equiv="encoding">
 		<meta content="text/html;charset=utf-8" http-equiv="Content-Type">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<meta name="viewport" content="width=device-width, min-height=device-height, initial-scale=1">
 		<meta name="keywords" content="common floor contra dance covid policy">
 		<link rel="icon" type="image/x-icon" href="logo.png">
 		<link rel="stylesheet" type="text/css" href="style.css" media="screen"/>
