--- a/CovidPolicy.html
+++ b/CovidPolicy.html
@@ -24,6 +24,12 @@
 			<li>Dancers <b>must receive a negative test result before attending if they had close contact with someone with COVID-19</b> in the 14 days before the dance.</li>
 			<li>Dancers <b>must notify CommonFloorContraDance@gmail.com if you test positive for COVID-19 in the 10 days following</b> a dance, so they can provide exposure notifications to all attendees.</li>
 		</ul>
+		<h2>Dance Cancellation Policy:</h2>
+		The organizers may choose to cancel events during periods of elevated risk to community health.
+		<p>
+		Cancellations with be published no later than 48 hours before an event starts.
+		<p>
+		<b>Dancers should check <a href="/">the homepage</a> before heading to a dance</b> to see if it is cancelled.
 		<p>
 		<script>
 			document.write("Last modified on " + document.lastModified);
