--- a/CodeOfConduct.html
+++ b/CodeOfConduct.html
@@ -12,10 +12,30 @@
 	</head>
 	<body>
 		<a href="/">❰ Home</a>
-		<h1>Introduction & Mission</h1>
+
+		<h1>Cancellation</h1>
+		We may cancel events during periods of elevated risk to community health.<br>
+		Cancellations with be published no later than 48 hours before an event starts.<br>
+		Dancers should <b>check <a href="/">the homepage</a> before heading to a dance</b> to see if it is cancelled.<br>
+
+		<h1>COVID-19</h1>
+		<h2>These rules apply to all dance attendies:</h2>
+		<ul>
+			<li>Dancers <b>must wear a well-fitted N95</b> (or similar) mask while inside the building at all times (aside from drinking). We may have some available, but please don't rely on it.</li>
+			<li>Dancers <b>must provide proof of up-to-date vaccination</b> (primary series plus 1 booster, if eligible).</li>
+			<li>Dancers <b>must provide a way to contact them</b> so they can be notified of COVID-19 cases after the dance.</li>
+			<li>Dancers <b>acknowledge and assume risk</b> of contracting or being exposed to COVID-19 at this event. They absolve the dance’s organizers, performers, volunteers, and venue of any liability for contracting or being exposed to COVID-19 at this event.</li>
+			<li>Dancers <b>must not attend if they feel ill in any way</b>, including experiencing any COVID-19 symptoms such as: cough, congestion or runny nose, headache, fatigue, muscle or body aches, fever or chills, loss of smell or taste, diarrhea, nausea or vomiting, and/or shortness of breath or difficulty breathing.</li>
+			<li>Dancers <b>must receive a negative test result before attending if they had COVID-19</b> in the 14 days (after my 5-day minimum isolation period has ended and all symptoms are gone).</li>
+			<li>Dancers <b>must receive a negative test result before attending if they had close contact with someone with COVID-19</b> in the 14 days before the dance.</li>
+			<li>Dancers <b>must notify CommonFloorContraDance@gmail.com if you test positive for COVID-19 in the 10 days following</b> a dance, so they can provide exposure notifications to all attendees.</li>
+		</ul>
+
+		<h1>Mission</h1>
 		At the CFC we want to create an environment of connection, community, and joy for all levels of dancers from all backgrounds. We cultivate this culture with a foundation of consent, both spoken and practiced. We strive to have a dance that is all-gender and consent-based, and we call Larks/Ravens. Each time you dance at CFC we want to make sure you feel happy, safe, comfortable and empowered to communicate. CFC helps uphold a comfortable and safe environment by teaching consent at all our dances and by having a designated safety team.
 		<p>
 		The safety and success of our dance is a team effort and that includes you! If you choose to dance with us we ask that you commit to following our code of conduct. 
+
 		<h1>Code of Conduct</h1>
 		Practice good communication and ask for consent. Be attentive to how your partner dances. Please do:
 		<ul>
@@ -31,7 +51,7 @@
 			<li>Systematic or continued unwanted and annoying actions, including threats and demands, will not be tolerated. This can be verbal, physical, or sexual, and none of it is ok.</li>
 		</ul>
 		<p>
-		This CoC is a living, breathing document and will change over time. We invite community input and any changes will be announced on social media, email and this website.
+		This a living, breathing document and will change over time. We invite <a href="mailto:CommonFloorContraDance@gmail.com">community input</a> and any changes will be published on this website.
 		<p>
 		<script>
 			document.write("Last modified on " + document.lastModified);
