--- a/CodeOfConduct.html
+++ b/CodeOfConduct.html
@@ -5,7 +5,7 @@
 		<meta content="utf-8" http-equiv="encoding">
 		<meta content="text/html;charset=utf-8" http-equiv="Content-Type">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<meta name="keywords" content="common floor contra dance code conduct">
+		<meta name="keywords" content="common floor contra dance code conduct covid cancellation mission">
 		<link rel="icon" type="image/x-icon" href="logo.png">
 		<link rel="stylesheet" type="text/css" href="style.css" media="screen"/>
 		<link rel="canonical" href="http://www.commonfloorcontra.dance/CodeOfConduct" media="screen"/>
@@ -53,8 +53,10 @@
 		<p>
 		This a living, breathing document and will change over time. We invite <a href="mailto:CommonFloorContraDance@gmail.com">community input</a> and any changes will be published on this website.
 		<p>
+		<footer>
 		<script>
 			document.write("Last modified on " + document.lastModified);
 		</script>
+		</footer>
 	</body>
 </html>
