--- a/CodeOfConduct.html
+++ b/CodeOfConduct.html
@@ -15,7 +15,7 @@
 
 		<h1 id="Cancellation">Cancellation</h1>
 		We may cancel events during periods of elevated risk to community health.<br>
-		Cancellations with be published no later than 48 hours before an event starts.<br>
+		Cancellations with be published no later than 48 hours before an event would have started.<br>
 		Dancers should <b>check <a href="/">the homepage</a> before heading to a dance</b> to see if it is cancelled.<br>
 
 		<h1 id="COVID-19">COVID-19</h1>
