rename to policies

--- a/policies.html
+++ b/policies.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Code of Conduct | Common Floor Contra Dance</title>
+		<title>Policies | Common Floor Contra Dance</title>
 		<meta content="utf-8" http-equiv="encoding">
 		<meta content="text/html;charset=utf-8" http-equiv="Content-Type">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<meta name="keywords" content="common floor contra dance code conduct covid cancellation mission">
+		<meta name="keywords" content="common floor contra dance policies">
 		<link rel="icon" type="image/x-icon" href="logo.png">
 		<link rel="stylesheet" type="text/css" href="style.css" media="screen"/>
-		<link rel="canonical" href="http://www.commonfloorcontra.dance/CodeOfConduct" media="screen"/>
+		<link rel="canonical" href="http://www.commonfloorcontra.dance/policies" media="screen"/>
 	</head>
 	<body>
 		<a href="/">❰ Home</a>
